add contact information

--- a/me.index.html
+++ b/me.index.html
@@ -4,7 +4,7 @@
 
 		<style>
 			body{
-				background: url('Ocean-Wallpaper-Image.jpg') no-repeat center center fixed; 
+				background: url('./resources/Ocean-Wallpaper-Image.jpg') no-repeat center center fixed; 
  				-webkit-background-size: cover;
  				-moz-background-size: cover;
 				-o-background-size: cover;
@@ -18,13 +18,20 @@
 				font-size: 60px;
 				margin: 0px;
 			}
+			h2{
+				color: white;
+				font-family: 'Helvetica Neue', Helvetica;
+				font-weight: 100;
+				font-size: 30px;
+				margin: 0px;
+			}
 
 			p{
 				color: white;
 				font-family: 'Helvetica Neue', Helvetica;
 				font-weight: 200;
-
 			}
+
 			.box{
 				background-color: rgba(0,0,0,0.5);
 				padding: 20px;
@@ -39,12 +46,21 @@
 		<div class="box">
 			<h1>Sammy Snider</h1>
 
-			<p>
+			<h2>
 				<i>Web Developer</i>
-			</p>
+			</h2>
 
 			<p>
-				Full-time student at Chapel Hill.  I enjoy web development and skateboarding and guitar.  Get to know me if you like :)
+				Full-time student at UNC - Chapel Hill.  I enjoy web development,skateboarding and guitar.  Get to know me if you like :)
+				<br />
+				<br />
+				<br />
+				<b>Contact info</b>
+				<br />
+				<br />
+				<b>email:</b>  sam828@live.unc.edu
+				<br />
+				<b>Git:</b>  https://github.com/SammySnider
 			</p>
 
 			<BR/>
@@ -52,7 +68,7 @@
 			<BR/>
 
 			<a href="https://www.linkedin.com/in/sam-snider-44002352">
-			<img src='linkedicon.png' />
+			<img src='./resources/linkedicon.png' />
 			</a>
 
 		</div>
