update contact information

--- a/me.index.html
+++ b/me.index.html
@@ -44,14 +44,14 @@
 
 	<body>
 		<div class="box">
-			<h1>Sammy Snider</h1>
+			<h1>Sam Snider</h1>
 
 			<h2>
-				<i>Web Developer</i>
+				<i>Computer Science Student</i>
 			</h2>
 
 			<p>
-				Full-time student at UNC - Chapel Hill.  I enjoy web development,skateboarding and guitar.  Get to know me if you like :)
+				Problem solver.  Full time computer science and entrepreneurship student at UNC - Chapel Hill.
 				
 				<br/><br/><br/>
 				
@@ -67,13 +67,13 @@
 
 			<BR/><BR/>
 
-			<a href="https://github.com/SammySnider" target="_blank">
+			<a href="https://github.com/samsnider96" target="_blank">
 			<img src='./resources/octocat.png' height="110" width="110" />
 			</a>
 
 			<BR/><BR/>
 
-			<a href="https://www.linkedin.com/in/sam-snider-44002352" target="_blank">
+			<a href="https://www.linkedin.com/in/samsnider96" target="_blank">
 			<img src='./resources/linkedicon.png' />
 			</a>
 
