--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <script type="text/javascript" src="source-of-jquery.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
-  <title>Sam Snider - Course history, skills and interests</title>
+  <title>Sam Snider - Contact</title>
 
   <link rel="stylesheet" type="text/css" href="Personal-Webpage.css">
 
@@ -18,8 +18,8 @@
       <nav>
         <ul>
           <li><a href="#">Blog</a></li>
-          <li><a href="contact.html">Contact Info</a></li>
-          <li><a href="me.index.html">Back <BR/> to <BR/> Home</a></li>
+          <li><a href="skills.html">Course History + Skills</a></li>
+          <li><a href="me.index.html">Back <BR/> to <BR/> Home </a></li>
         </ul>
       </nav>
 
@@ -35,7 +35,3 @@
   });
 
   </script>
-
-
-
-
