--- a/me.index.html
+++ b/me.index.html
@@ -2,214 +2,12 @@
 	<head>
 
 	<script type="text/javascript" src="source-of-jquery.js"></script>
-
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 	<title>Sam Snider</title>
 
+	<link rel="stylesheet" type="text/css" href="Personal-Webpage.css">
 
-		<style>
-
-		      /* END STYLE RESET */
-
-
-/* 
-html5doctor.com Reset Stylesheet
-v1.6.1
-Last Updated: 2010-09-17
-Author: Richard Clark - http://richclarkdesign.com 
-Twitter: @rich_clark
-*/
-
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-body {
-    line-height:1;
-}
-
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section { 
-    display:block;
-}
-
-nav ul {
-    list-style:none;
-}
-
-blockquote, q {
-    quotes:none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
-}
-
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-/* change colours to suit your needs */
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
-}
-
-/* change colours to suit your needs */
-mark {
-    background-color:#ff9;
-    color:#000; 
-    font-style:italic;
-    font-weight:bold;
-}
-
-del {
-    text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
-}
-
-table {
-    border-collapse:collapse;
-    border-spacing:0;
-}
-
-/* change border colour to suit your needs */
-hr {
-    display:block;
-    height:1px;
-    border:0;   
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
-}
-
-input, select {
-    vertical-align:middle;
-}
-
-
-     		 /* END STYLE RESET */
-
-
-			body{
-				background: url('./resources/OldWell.JPG') no-repeat center center fixed; 
- 				-webkit-background-size: cover;
- 				-moz-background-size: cover;
-				-o-background-size: cover;
-				background-size: cover;
-			}
-
-			h1{
-				color: white;
-				font-family: 'Helvetica Neue', Helvetica;
-				font-weight: 100;
-				font-size: 60px;
-				margin: 0px;
-			}
-			h2{
-				color: lightblue;
-				font-family: 'Helvetica Neue', Helvetica;
-				font-weight: 100;
-				font-size: 30px;
-				margin: 0px;
-			}
-
-			nav {
-
-  			width: 100%;
-
-  			margin: 20px 0; }
-
- 			nav ul {
-
-  			list-style: none;
-
-  			overflow: hidden;
-
-  	/*		margin: 0;
-
-  			padding: 0; }   */
-			}
-
-  		nav ul li {
-
-  			float: left;  
-
-  			width: 33%;
-
-  			}
-
-			nav ul li a {
-
-				text-align: center;
-
-  			padding: 8px 0;
-
-  			display: block;
-
-  			width: 100%; 
-
-  			background: #cdeb8e; 
-
-  			  background: -moz-linear-gradient(top, #cdeb8e 0%, #b0ca34 100%); /* FF3.6+ */
-
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cdeb8e), color-stop(100%,#b0ca34)); /* Chrome,Safari4+ */
-
-  background: -webkit-linear-gradient(top, #cdeb8e 0%,#b0ca34 100%); /* Chrome10+,Safari5.1+ */
-
-  background: -o-linear-gradient(top, #cdeb8e 0%,#b0ca34 100%); /* Opera 11.10+ */
-
-  background: linear-gradient(to bottom, #cdeb8e 0%,#b0ca34 100%); /* W3C, IE10+ */
-
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdeb8e', endColorstr='#b0ca34',GradientType=0 ); /* IE6-9 */
-
-  		}
-
-
-			p{
-				color: white;
-				font-family: 'Helvetica Neue', Helvetica;
-				font-weight: 200;
-			}
-
-			.box{
-				background-color: rgba(0,0,0,0.5);
-				padding: 20px;
-				width: 300px;
-				margin: 100px auto;
-				text-align: center;
-			}
-		</style>
 	</head>
 
 	<body>
@@ -224,14 +22,14 @@ input, select {
 			<nav>
  		    <ul>
           <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact Info</a></li>
+          <li><a href="contact.html">Contact Info</a></li>
           <li><a href="skills.html">Course history + skills</a></li>
         </ul>
       </nav>
 
 			<p>
 
-				<br/><br/><br/>
+				<br/><br/>
 
 				Problem solver.  Full time computer science and entrepreneurship student at UNC - Chapel Hill.
 				
