add favicon, improve aesthetics of menu bar

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
 
   <title>Sam Snider - Contact</title>
 
+  <link href="resources/smile-24-219291.png" rel="icon" type="image/x-icon" />
+
+
   <link rel="stylesheet" type="text/css" href="Personal-Webpage.css">
 
   </head>
