--- a/me.index.html
+++ b/me.index.html
@@ -6,6 +6,8 @@
 
 	<title>Sam Snider</title>
 
+	<link href="resources/world-map-vivid-16-267881.png" rel="icon" type="image/x-icon" />
+
 	<link rel="stylesheet" type="text/css" href="Personal-Webpage.css">
 
 	</head>
