--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,9 @@
 
   <title>Sam Snider - Course history, skills and interests</title>
 
+  <link href="resources/world-map-vivid-16-267881.png" rel="icon" type="image/x-icon" />
+
+
   <link rel="stylesheet" type="text/css" href="Personal-Webpage.css">
 
   </head>
