better content in the contact section and add aesthetic touch-ups

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,13 @@
   <body>
     <div class="box">
 
+      <h1>Sam Snider</h1>
+
+      <h2>
+        <i>Contact Info</i>
+        <br/><br/><br/>
+      </h2>
+
       <nav>
         <ul>
           <li><a href="#">Blog</a></li>
@@ -26,6 +33,25 @@
         </ul>
       </nav>
 
+    <p>
+
+      <BR/><BR/>
+      <b>email</b>  <BR/> sam.snider301@gmail.com
+      <BR/><BR/>
+      <b>email (secondary)</b>  sam828@live.unc.edu
+      <BR/><BR/>
+      <b>phone</b> <BR/> (828) 702 - 3353
+      <BR/><BR/>
+      <b>Github</b> <BR/>
+      <a href="https://github.com/samsnider96">samsnider96</a>
+      <BR/><BR/>
+      <b>Linkedin</b> <BR/>
+      <a href="https://www.linkedin.com/in/samsnider96">samsnider96</a>
+      <BR/><BR/>
+      <b>Facebook</b>  <BR/>
+      <a href="https://www.facebook.com/samsnider96">samsnider96</a>
+
+    </p>
 
     </div>
 
