--- a/skills.html
+++ b/skills.html
@@ -18,6 +18,13 @@
   <body>
     <div class="box">
 
+      <h1>Sam Snider</h1>
+
+      <h2>
+        <i>Course history, Skills and Interests</i>
+        <br/><br/><br/>
+      </h2>
+
       <nav>
         <ul>
           <li><a href="#">Blog</a></li>
