migrated image resources to the imgur so that other users can see them as well

--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,11 @@
 <html>
   <head>
 
-  <script type="text/javascript" src="source-of-jquery.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
   <title>Sam Snider - Contact</title>
 
-  <link href="resources/smile-24-219291.png" rel="icon" type="image/x-icon" />
+  <link href="http://i.imgur.com/oVNKW0w.png" rel="icon" type="image/x-icon" />
 
 
   <link rel="stylesheet" type="text/css" href="Personal-Webpage.css">
@@ -29,7 +28,7 @@
         <ul>
           <li><a href="#">Blog</a></li>
           <li><a href="skills.html">Course History + Skills</a></li>
-          <li><a href="me.index.html">Back <BR/> to <BR/> Home </a></li>
+          <li><a href="index.html">Back <BR/> to <BR/> Home </a></li>
         </ul>
       </nav>
 
@@ -39,17 +38,15 @@
       <b>email</b>  <BR/> sam.snider301@gmail.com
       <BR/><BR/>
       <b>email (secondary)</b>  sam828@live.unc.edu
+
       <BR/><BR/>
-      <b>phone</b> <BR/> (828) 702 - 3353
+      <a href="https://github.com/samsnider96"><b>Github</b></a>
       <BR/><BR/>
-      <b>Github</b> <BR/>
-      <a href="https://github.com/samsnider96">samsnider96</a>
+      <a href="https://www.linkedin.com/in/samsnider96"><b>Linkedin</b></a>
       <BR/><BR/>
-      <b>Linkedin</b> <BR/>
-      <a href="https://www.linkedin.com/in/samsnider96">samsnider96</a>
+      <a href="https://www.facebook.com/samsnider96"><b>Facebook</b></a>
       <BR/><BR/>
-      <b>Facebook</b>  <BR/>
-      <a href="https://www.facebook.com/samsnider96">samsnider96</a>
+      <a href="https://twitter.com/samsnider96"><b>Twitter</b></a>
 
     </p>
 
