--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-	<head>
+	<head> 
 
-	<script type="text/javascript" src="source-of-jquery.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 	<title>Sam Snider - Home</title>
 
-	<link href="resources/world-map-vivid-16-267881.png" rel="icon" type="image/x-icon" />
+	<link href="http://i.imgur.com/NmU2IPN.png" rel="icon" type="image/x-icon" />
 
 	<link rel="stylesheet" type="text/css" href="Personal-Webpage.css">
 
@@ -46,13 +45,13 @@
 			<BR/><BR/>
 
 			<a href="https://github.com/samsnider96" target="_blank">
-			<img src='./resources/octocat.png' height="110" width="110" />
+			<img src='http://i.imgur.com/p6TvMwh.png' height="110" width="110" />
 			</a>
 
 			<BR/><BR/>
 
 			<a href="https://www.linkedin.com/in/samsnider96" target="_blank">
-			<img src='./resources/linkedicon.png' />
+			<img src='http://i.imgur.com/CprgdPQ.png' />
 			</a>
 
 		</div>
