--- a/skills.html
+++ b/skills.html
@@ -2,7 +2,6 @@
 <html>
   <head>
 
-  <script type="text/javascript" src="source-of-jquery.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
   <title>Sam Snider - Course history, skills and interests</title>
@@ -29,7 +28,7 @@
         <ul>
           <li><a href="#">Blog</a></li>
           <li><a href="contact.html">Contact Info</a></li>
-          <li><a href="me.index.html">Back <BR/> to <BR/> Home</a></li>
+          <li><a href="index.html">Back <BR/> to <BR/> Home</a></li>
         </ul>
       </nav>
 
