add content to skills page, utilized different background image with smaller file size, aesthetic changes

--- a/skills.html
+++ b/skills.html
@@ -4,12 +4,19 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
-  <title>Sam Snider - Course history, skills and interests</title>
+  <title>Sam Snider - Skills</title>
 
   <link href="resources/world-map-vivid-16-267881.png" rel="icon" type="image/x-icon" />
 
-
   <link rel="stylesheet" type="text/css" href="Personal-Webpage.css">
+
+<!--   <style type="text/css">
+    p{
+      color: white;
+      font-family: 'Helvetica Neue', Helvetica;
+      font-weight: 200;
+    }
+  </style> -->
 
   </head>
 
@@ -20,7 +27,7 @@
       <h1>Sam Snider</h1>
 
       <h2>
-        <i>Course history, Skills and Interests</i>
+        <i>Course History and Skills</i>
         <br/><br/><br/>
       </h2>
 
@@ -31,6 +38,33 @@
           <li><a href="index.html">Back <BR/> to <BR/> Home</a></li>
         </ul>
       </nav>
+
+      <p>
+
+        <br/>
+
+        <b>Skills</b>
+
+        </br><br/>
+
+        Programming Languages:  Proficient in Java, Python, HTML, CSS; familiar with C, JavaScript.
+        </br><br/>Operating Systems:  OS X, Unix
+        </br><br/>Experience with Git
+
+        <br/><br/><br/>
+
+        <b>courses taken at UNC - CH</b>
+
+        </br><br/>
+
+        Algorithms and Analysis<br/>Internet Services and Protocols<br/> 
+        Data Structures<br/>Computer Organization<br/>Discreet Structures
+        <br/>Foundation of Programming<br/><br/>Business Venturing Workshop<br/> 
+        Entrepreneurship: Principles and Practice
+          
+        <br/><br/>
+                        
+      </p>
 
 
     </div>
