--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
       <nav>
         <ul>
           <li><a href="#">Blog</a></li>
-          <li><a href="skills.html">Course History + Skills</a></li>
+          <li><a href="skills.html">Skills</a></li>
           <li><a href="index.html">Back <BR/> to <BR/> Home </a></li>
         </ul>
       </nav>
