add link to blog instead of JS alert that the blog doesn't exist yet.

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
       <nav>
         <ul>
-          <li><a href="#">Blog</a></li>
+          <li><a href="https://vontentblog.wordpress.com/">Blog</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="index.html">Back <BR/> to <BR/> Home </a></li>
         </ul>
@@ -53,11 +53,11 @@
     </div>
 
   </body>
-
+<!-- 
     <script>
 
   $("nav ul li:first-child a").on("click", function(){
     alert("The blog is a work-in-progress and soon to come.");
   });
 
-  </script>
+  </script> -->
