--- a/skills.html
+++ b/skills.html
@@ -27,13 +27,13 @@
       <h1>Sam Snider</h1>
 
       <h2>
-        <i>Course History and Skills</i>
+        <i>Skills and Course History</i>
         <br/><br/><br/>
       </h2>
 
       <nav>
         <ul>
-          <li><a href="#">Blog</a></li>
+          <li><a href="https://vontentblog.wordpress.com/">Blog</a></li>
           <li><a href="contact.html">Contact Info</a></li>
           <li><a href="index.html">Back <BR/> to <BR/> Home</a></li>
         </ul>
@@ -71,13 +71,13 @@
 
   </body>
 
-    <script>
+<!--     <script>
 
   $("nav ul li:first-child a").on("click", function(){
     alert("The blog is a work-in-progress and soon to come.");
   });
 
-  </script>
+  </script> -->
 
 
 
