--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 			<h1>Sam Snider</h1>
 
 			<h2>
-				<i>Computer Science Student</i>
+				<i>Software Engineer<br/>+<br/>Web Developer</i>
 				<br/><br/><br/>
 			</h2>
 
 			<nav>
  		    <ul>
-          <li><a href="#">Blog</a></li>
+          <li><a href="https://vontentblog.wordpress.com/">Blog</a></li>
           <li><a href="contact.html">Contact Info</a></li>
           <li><a href="skills.html">Skills</a></li>
         </ul>
@@ -59,10 +59,10 @@
 
 	</body>
 
-	<script>
+<!-- 	<script>
 
 	$("nav ul li:first-child a").on("click", function(){
 		alert("The blog is a work-in-progress and soon to come.");
 	});
 
-  </script>
+  </script> -->
