add fancy CSS hover tricks, fix broken blog link, change background

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 			<nav>
  		    <ul>
-          <li><a href="https://vontentblog.wordpress.com/">Blog</a></li>
+          <li><a href="http://www.vontent.co/">Future Startup</a></li>
           <li><a href="contact.html">Contact Info</a></li>
           <li><a href="skills.html">Skills</a></li>
         </ul>
@@ -52,7 +52,7 @@
 			<BR/><BR/>
 
 			<a href="https://www.linkedin.com/in/samsnider96" target="_blank">
-			<img src='http://i.imgur.com/CprgdPQ.png' />
+			<img src='http://i.imgur.com/CprgdPQ.png' height="110" width="110" />
 			</a>
 
 		</div>
