--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
       <nav>
         <ul>
-          <li><a href="https://vontentblog.wordpress.com/">Blog</a></li>
+          <li><a href="http://www.vontent.co/">Future Startup</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="index.html">Back <BR/> to <BR/> Home </a></li>
         </ul>
