--- a/skills.html
+++ b/skills.html
@@ -6,7 +6,7 @@
 
   <title>Sam Snider - Skills</title>
 
-  <link href="resources/world-map-vivid-16-267881.png" rel="icon" type="image/x-icon" />
+  <link href="http://i.imgur.com/NmU2IPN.png" rel="icon" type="image/x-icon" />
 
   <link rel="stylesheet" type="text/css" href="Personal-Webpage.css">
 
@@ -33,7 +33,7 @@
 
       <nav>
         <ul>
-          <li><a href="https://vontentblog.wordpress.com/">Blog</a></li>
+          <li><a href="http://www.vontent.co/">Future Startup</a></li>
           <li><a href="contact.html">Contact Info</a></li>
           <li><a href="index.html">Back <BR/> to <BR/> Home</a></li>
         </ul>
