--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html>
   <head>
 
+  <meta charset="UTF-8">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
   <title>Sam Snider - Contact</title>
@@ -26,7 +28,7 @@
 
       <nav>
         <ul>
-          <li><a href="http://www.vontent.co/">Future Startup</a></li>
+          <li><a href="projects.html">Projects</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="index.html">Back <BR/> to <BR/> Home </a></li>
         </ul>
@@ -37,16 +39,33 @@
       <BR/><BR/>
       <b>email</b>  <BR/> sam.snider301@gmail.com
       <BR/><BR/>
-      <b>email (secondary)</b>  sam828@live.unc.edu
+      <b>email (secondary)</b><BR/>  sam828@live.unc.edu
+      <BR/><BR/>
+      
 
+      <a href="https://github.com/samsnider96" target="_blank">
+      <img src='http://i.imgur.com/p6TvMwh.png' height="110" width="110" />
+      </a> 
       <BR/><BR/>
-      <a href="https://github.com/samsnider96"><b>Github</b></a>
+
+
+      <a href="https://www.linkedin.com/in/samsnider96" target="_blank">
+      <img src='http://i.imgur.com/CprgdPQ.png' height="120" width="120" />
+      </a>      
       <BR/><BR/>
-      <a href="https://www.linkedin.com/in/samsnider96"><b>Linkedin</b></a>
+
+
+      <a href="https://twitter.com/samsnider96" target="_blank">
+      <img src='https://i.imgur.com/EvD63Xj.png' height="80" width="80" />
+      </a>       
       <BR/><BR/>
-      <a href="https://www.facebook.com/samsnider96"><b>Facebook</b></a>
+
+
+      <a href="https://www.facebook.com/samsnider96" target="_blank">
+      <img src='https://i.imgur.com/GG767Ey.png' height="80" width="80" />
+      </a>       
       <BR/><BR/>
-      <a href="https://twitter.com/samsnider96"><b>Twitter</b></a>
+
 
     </p>
 
