--- a/skills.html
+++ b/skills.html
@@ -2,6 +2,8 @@
 <html>
   <head>
 
+  <meta charset="UTF-8">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
   <title>Sam Snider - Skills</title>
@@ -33,8 +35,7 @@
 
       <nav>
         <ul>
-          <li><a href="http://www.vontent.co/">Future Startup</a></li>
-          <li><a href="contact.html">Contact Info</a></li>
+          <li><a href="projects.html">projects</a></li>
           <li><a href="index.html">Back <BR/> to <BR/> Home</a></li>
         </ul>
       </nav>
