--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
 
   <meta charset="UTF-8">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-
+<!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+ -->
   <title>Sam Snider - Projects</title>
 
   <link href="http://i.imgur.com/oVNKW0w.png" rel="icon" type="image/x-icon" />
@@ -26,29 +26,32 @@
         <br/><br/><br/>
       </h2>
 
-      <nav>
-        <ul>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="index.html">Back <BR/> to <BR/> Home </a></li>
-        </ul>
-      </nav>
-
     <p>
 
       <div class = "projectLinks">
 
         <BR/><BR/>
-        <a href="https://chrome.google.com/webstore/detail/harvey/bfogocnhckjpjgiocghojkodndjlfokl"><b>Harvey:</br>Chrome Extension</b></a>
+        <a title = "An extension which shows Steve Harvey's face" href="https://chrome.google.com/webstore/detail/harvey/bfogocnhckjpjgiocghojkodndjlfokl" target="_blank"><b>Harvey:</br>Chrome Extension</b></a>
         <BR/><hr><BR/>
-        <a href="http://thomasblakey.info/"><b>ThomasBlakey.info</b></a>
+        <a title = "A personal website I made for a friend" href="http://thomasblakey.info/" target="_blank"><b>ThomasBlakey.info</b></a>
         <BR/><hr><BR/>
-        <a href="https://www.noteninja.com/"><b>Noteninja.com<BR/>(made with Wordpress)</b></a>
+        <a title = "A landing page I made for a startup I worked for" href="https://www.noteninja.com/" target="_blank"><b>Noteninja.com<BR/>(made with Wordpress)</b></a>
         <BR/><BR/>
 
       </div>
     </p>
 
+    </div>
 
+
+    <div class="navbar">
+      <nav>
+        <ul>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="index.html">Back to Home</a></li>
+        </ul>
+      </nav>
     </div>
 
   </body>
+
